CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libterm)

#SET(CMAKE_C_FLAGS "-Wall")
#SET(CMAKE_CXX_FLAGS "-Wall")
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(qterm)
IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "qnx")
ADD_SUBDIRECTORY(cterm)
ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "qnx")
IF(${CMAKE_SYSTEM_NAME} MATCHES "qnx")
#ADD_SUBDIRECTORY(casterm)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "qnx")
