CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libterm)

IF(${CMAKE_SYSTEM_NAME} MATCHES "qnx")
	# The QNX GCC does not seem to have -isystem so remove the flag.
	set(CMAKE_INCLUDE_SYSTEM_FLAG_C)
	set(CMAKE_INCLUDE_SYSTEM_FLAG_CXX)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "qnx")

#SET(CMAKE_C_FLAGS "-Wall")
#SET(CMAKE_CXX_FLAGS "-Wall")
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(qterm)

IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "qnx")
	ADD_SUBDIRECTORY(cterm)
ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "qnx")

IF(${CMAKE_SYSTEM_NAME} MATCHES "qnx")
	#ADD_SUBDIRECTORY(casterm)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "qnx")


